--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.3.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
