--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.10",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-date-picker": "^4.2.13",
     "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
